models-as-a-service/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    opendatahub.io/managed: "false"
    security.opendatahub.io/authorino-tls-bootstrap: "true"
  labels:
    istio.io/rev: openshift-gateway
  name: maas-default-gateway
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-default
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: maas.apps.ocp.2msw7.sandbox205.opentlc.com
    name: https
    port: 443
    protocol: HTTPs
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: gwapi-wildcard
      mode: Terminate
