models-as-a-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maas-api
  namespace: redhat-ods-applications
spec:
  parentRefs:
  - name: maas-default-gateway
    namespace: openshift-ingress
  hostnames: ["example.maas.apps.ocp.2msw7.sandbox205.opentlc.com"]
  rules:
  - backendRefs:
    - name: maas-api 
      port: 8443
